--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -6,7 +6,7 @@
         <section class="contact-container">
             <h1>NOUS CONTACTER</h1>
             <article class="infos">
-                <h2>Guilherand-Granges Ardèche Handball</h2>
+                <h1 style="font-size: 1.5em">Guilherand-Granges Ardèche Handball</h1>
                 <a href="#" class="contact-element">
                     <i class="bi bi-geo-alt"></i>
                     <p> Espace Rémy Roure - 07500 Guilherand-Granges</p>
