create the planning with matches and training

--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="{{ asset('css/footer.css') }}">
+    <script src="{{ asset('js/transitionBottomTop.js') }}"></script>
 </head>
 {% block footer %}
     <section class="contact reveal_bottom">
