edit matchSection HTML

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,6 +4,7 @@
 {% block body %}
     {% include 'header.html.twig' %}
     <link rel="stylesheet" href="{{ asset("css/homePage.css") }}">
+    <link rel="stylesheet" href="{{ asset("css/matchSection.css") }}">
     <main>
         <section class="match reveal_bottom">
             <fieldset class="nextMatch matchSection">
@@ -19,10 +20,12 @@
                         <td class="next-match-team2"></td>
                     </tr>
                     <tr>
-                        <td class="next-match-location" colspan="3"></td>
+                        <td class="next-match-location" colspan="3">
+                            <i class="bi bi-geo-alt"></i>
+                        </td>
                     </tr>
                     <tr>
-                        <td class="next-match-remaining-time" colspan="3"></td>
+                        <td class="next-match-remaining-time" colspan="3"><p></p></td>
                     </tr>
                     </tbody>
                 </table>
