finished CSS for match sections

--- a/public/css/matchSection.css
+++ b/public/css/matchSection.css
@@ -7,6 +7,7 @@
     align-items: center;
     background-color: #f2f2f2;
     flex-wrap: wrap;
+    color: #EAEAEA;
 }
 
 
@@ -16,7 +17,6 @@
     width: 40vw;
     border-radius: 12px;
     box-shadow: 0 0 7px 3px rgba(0, 0, 0, 0.25);
-    color: white;
 }
 
 .matchSection > legend{
@@ -70,9 +70,6 @@ legend>h2{
     font-size: 1.5em;
 }
 
-.next-match-location{
-    color: #DCDCDC;
-}
 .next-match-location > i{
     background-color: #333333;
     color: #98f609;
@@ -81,6 +78,7 @@ legend>h2{
     display: flex;
     font-size: 1.1em;
     justify-content: center;
+    align-items: baseline;
 }
 
 .next-match-remaining-time > p > dt{
@@ -88,4 +86,46 @@ legend>h2{
     margin-left: 0.1em;
     color: #98f609;
     font-style: italic;
+    font-size: 0.9em;
+}
+
+.last-match-team1, .last-match-team2 {
+    font-size: 1.2em;
+    width: 35%;
+    padding: 0.2em;
+}
+
+.last-match-time {
+    border: 1px solid #000000;
+    background-color: #DDDDDD;
+    font-size: 3em;
+    color: #1b1b1b;
+    box-shadow: inset 0 7px 15px 1px #1b1b1b;
+}
+
+.matchContent > tr {
+    height: 4em;
+}
+
+.last-match-date, .last-match-location, .last-match-remaining-time {
+    font-size: 1.5em;
+}
+
+.last-match-location > i{
+    background-color: #333333;
+    color: #98f609;
+}
+.last-match-remaining-time > p{
+    display: flex;
+    font-size: 1.1em;
+    justify-content: center;
+    align-items: baseline;
+}
+
+.last-match-remaining-time > p > dt{
+    margin-right: 0.5em;
+    margin-left: 0.1em;
+    color: #98f609;
+    font-style: italic;
+    font-size: 0.9em;
 }
