--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -31,17 +31,26 @@
                 </table>
             </fieldset>
 
-            <section class="lastMatch matchSection">
-                <h2>Match précédent</h2>
-                <article>
-                    <p class="last-match-date"></p>
-                    <p class="last-match-team1"></p>
-                    <p class="last-match-time"></p>
-                    <p class="last-match-team2"></p>
-                    <p class="last-match-location"></p>
-                </article>
-            </section>
-
+            <fieldset class="lastMatch matchSection">
+                <legend><h2>Match précédent</h2></legend>
+                <table>
+                    <tbody class="matchContent">
+                    <tr>
+                        <td class="last-match-date" colspan="3"></td>
+                    </tr>
+                    <tr>
+                        <td class="last-match-team1"></td>
+                        <td class="last-match-time"></td>
+                        <td class="last-match-team2"></td>
+                    </tr>
+                    <tr>
+                        <td class="last-match-location" colspan="3">
+                            <i class="bi bi-geo-alt"></i>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </fieldset>
         </section>
         <section class="pic-ctn reveal_bottom">
             <section class="aboutOur">
