refactor js for match loading

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -120,5 +120,6 @@
         {% include 'footer.html.twig' %}
     </main>
     <script src="{{ asset('js/index.js') }}"></script>
+    <script src="{{ asset('js/matches.js') }}"></script>
     <script src="{{ asset('js/transitionBottomTop.js') }}"></script>
 {% endblock %}
