--- a/public/css/header.css
+++ b/public/css/header.css
@@ -21,19 +21,20 @@ header
     display: inline-flex;
     justify-content: space-around;
     align-items: center;
-    height: 15vh;
+    /*height: 15vh;*/
 }
 
 .logo
 {
     flex-basis: 10%;
     text-align: center;
+    height: 15%;
 }
 
 header img
 {
     min-width: 70px;
-    width: 7%;
+    width: 14%;
 }
 
 header>a, header>section
@@ -46,7 +47,7 @@ header>img
     position: absolute;
     filter: brightness(50%);
     width: 100%;
-    height: 15vh;
+    /*height: 15vh;*/
 }
 
 .sidebar
