--- a/templates/account/manageAccount.html.twig
+++ b/templates/account/manageAccount.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {% include 'header.html.twig' %}
-    <section id="allUsers"></section>
+    <section id="allUsers" style="padding: 70px 25%;height: 90vh"></section>
     {% include 'footer.html.twig' %}
     <script src="{{ asset('js/accountManage.js') }}"></script>
 {% endblock %}
