--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -12,7 +12,7 @@
 
 
         <section class="registrateForm formCreateTeam">
-            <h2>Nouveau utilisateur</h2>
+            <h2 class="newUtilisateur">Nouveau utilisateur</h2>
             <section class="left">
                 {{ form_start(registrationForm) }}
                 {{ form_row(registrationForm.pseudo, {label: 'Nom Utilisateur'}) }}
