--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -6,6 +6,8 @@
     display: flex;
     align-self: center;
     justify-content: center;
+    bottom: 0;
+    width: 100%;
 }
 
 .contact-container
