--- a/public/css/register.css
+++ b/public/css/register.css
@@ -13,8 +13,9 @@ main{
     padding:25px;
 }
 
-h2{
+.newUtilisateur{
     width: 100%;
+    color: black !important;
 }
 
 .left{
@@ -55,12 +56,12 @@ h2{
     margin-left: auto;
     margin-right: auto;
     background-color: green;
-    font-size: 2em;
-    height: 20%;
+    font-size: 1em;
+    height: 10%;
 }
 
 .btn:hover{
-    background-color: #085827;
+    background-color: #40885c;
     transition: 0.5s;
 }
 
