--- a/templates/bundles/TwigBundle/Exception/error500.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error500.html.twig
@@ -8,8 +8,8 @@
         <span class='error-num'>5</span>
         <div class='eye'></div>
         <div class='eye'></div>
-        <p class='sub-text'>Oh eyeballs! Something went wrong. We're <i>looking</i> to see what happened.</p>
-        <a href=''>Go back</a>
+        <p class='sub-text'>Oh, les globes oculaires! Quelque chose a mal tourné. Nous <i>essayons</i> de comprendre ce qui s'est passé.</p>
+        <a href="{{ path('app_home') }}">Retour à l'accueil</a>
     </div>
 
     <script src="{{ asset('js/error500.js') }}"></script>
